SFTest/src/objects/Job_Application__c.object
<CustomObject>
    <description>Represents a candidate&apos;s application to a position</description>
    <fields>
        <fullName>Cover_Letter__c</fullName>
        <label>Cover Letter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Applications__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Applications</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Review Resume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Interviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extend an Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Job Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JA-{00000}</displayFormat>
        <label>Job Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>